# blackwell-tensorcore-kernels

./: .gitignore  CMakeLists.txt  Makefile  README.md  VALIDATION.md
analysis/: plot.py  reference_summary.py
docs/: design-decisions.md  roadmap.md
experiments/: wmma_ws_probe.cu
include/: mma_ptx.cuh  util.cuh
results/: bench.csv  bench_fp32only.csv  bench_mma_session.csv  bench_phase3_session.csv  bench_sm90a.clocks.csv  bench_sm90a.csv  clock_state_mma_session.txt  clock_state_phase3_session.txt  clock_state_rate_probe.txt  mma_ablation.md  mma_rate_probe.csv  mma_stage_sweep.csv  ncu_cublas_8192.txt  ncu_cublastc_8192.txt  ncu_cutlass_8192.txt  ncu_fp8_tune.txt  ncu_ltfp8_tune.txt  ncu_sm120_cublastc_8192.txt  ncu_sm120_mma_warptile_8192.txt  ncu_sm120_wmma_8192.txt  ncu_wmma_8192.txt  nsys_kern_sum_4096.txt  nsys_kern_sum_8192.txt  nsys_kern_sum_mma_8192.txt  nsys_profile.md  phase3_lowprec.md  report.md
results/reference/: deepgemm.clocks.csv  deepgemm.txt  fa3.clocks.csv  fa3.txt  streamk.clocks.csv  streamk.txt  summary.md  tk.clocks.csv  tk.txt
scripts/: profile.sh  profile_mma_ncu.sh  run_bench.sh  run_rate_probe.sh  run_reference_benches.sh  sweep_mma_stages.sh
src/: cublas_tc.cu  cublas_tf32.cu  cublaslt_fp8.cu  cutlass_sm90.cu  gemm_mma.cu  gemm_mma_fp8.cu  gemm_naive.cu  gemm_tiled.cu  gemm_wmma.cu  main.cu  mma_rate_probe.cu  reference.cu
